# bot

./: bot.py  pyproject.toml
bots/aiocqhttp/: bot.py
bots/aiogram/: bot.py
bots/discord/: bot.py
bots/kook/: bot.py
bots/matrix/: bot.py
bots/qqbot/: bot.py
bots/web/: bot.py
core/utils/: web_render.py
